--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,85 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--
-        <style name="display_lar">
-            <item name="android:textSize">57sp</item>
-            <item name="android:letterSpacing">0</item>
-            <item name="android:textColor">#000000</item>
-        </style>
-
-        <style name="display_med">
-            <item name="android:textSize">45sp</item>
-            <item name="android:textColor">#000000</item>
-        </style>
-
-        <style name="display_sma">
-            <item name="android:textSize">36sp</item>
-            <item name="android:textColor">#000000</item>
-        </style>
-
-        <style name="headline_la">
-            <item name="android:textSize">32sp</item>
-            <item name="android:textColor">#000000</item>
-        </style>
-
-        <style name="headline_me">
-            <item name="android:textSize">28sp</item>
-            <item name="android:textColor">#000000
-            </item>
-        </style>
-
-        <style name="headline_sm">
-            <item name="android:textSize">24sp</item>
-            <item name="android:textColor">#000000
-            </item>
-        </style>
-
-        <style name="title_large">
-            <item name="android:textSize">22sp</item>
-            <item name="android:textColor">#000000
-            </item>
-        </style>
-
-        <style name="title_mediu">
-            <item name="android:textSize">16sp</item>
-            <item name="android:textColor">#000000
-            </item>
-        </style>
-
-        <style name="title_small">
-            <item name="android:textSize">14sp</item>
-            <item name="android:textColor">#000000</item>
-        </style>
-
-        <style name="label_large">
-            <item name="android:textSize">14sp</item>
-            <item name="android:textColor">#000000</item>
-        </style>
-
-        <style name="label_mediu">
-            <item name="android:textSize">12sp</item>
-            <item name="android:textColor">#000000</item>
-        </style>
-
-        <style name="label_small">
-            <item name="android:textSize">11sp</item>
-            <item name="android:textColor">#000000</item>
-        </style>
-
-        <style name="body_large_">
-            <item name="android:textSize">16sp</item>
-            <item name="android:textColor">#000000</item>
-        </style>
-
-        <style name="body_medium">
-            <item name="android:textSize">14sp</item>
-            <item name="android:textColor">#000000</item>
-        </style>
-
-        <style name="body_small_">
-            <item name="android:textSize">12sp</item>
-            <item name="android:textColor">#000000</item>
-        </style>-->
 
     <!--  ###### -->
     <style name="you_re_read">
@@ -159,7 +79,7 @@
     <style name="info_error_dialog_collapsed_subtitle" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">14sp</item>
         <item name="android:lineSpacingExtra">3sp</item>
-<!--        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>-->
+        <!--        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>-->
     </style>
 
     <style name="info_error_dialog_expanded_title" parent="TextAppearance.MaterialComponents.Headline3">
@@ -193,7 +113,7 @@
     <style name="info_error_dialog_expanded_location_subtitle" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">12sp</item>
         <item name="android:lineSpacingExtra">1sp</item>
-<!--        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>-->
+        <!--        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>-->
 
     </style>
 
@@ -219,7 +139,7 @@
     <style name="report_step_info" parent="TextAppearance.MaterialComponents.Body2">
         <item name="android:textSize">12sp</item>
         <item name="android:lineSpacingExtra">1sp</item>
-<!--        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>-->
+        <!--        <item name="android:textColor">@color/colorInfoErrorCollapsedSubtitle</item>-->
     </style>
 
     <style name="report_step_duration" parent="TextAppearance.MaterialComponents.Headline3">
@@ -246,6 +166,85 @@
         <item name="android:shadowRadius">0</item>
     </style>
 
+    <style name="guide_title_text">
+        <item name="android:textSize">32sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:lineSpacingExtra">8sp</item>
+    </style>
 
+    <style name="guide_pre_alpha_text">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/purpleNormal</item>
+        <item name="android:lineSpacingExtra">8sp</item>
+        <item name="android:fontFamily">@font/figtree_regular</item>
+    </style>
+
+    <style name="guide_version_text">
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:lineSpacingExtra">4sp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:letterSpacing">-0.01</item>
+        <item name="android:background">@drawable/bg_guide_version</item>
+        <item name="android:textColor">@color/purpleDarkText</item>
+    </style>
+
+    <style name="guide_bullet_head">
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+
+    </style>
+
+    <style name="guide_bullet_text">
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+    </style>
+
+
+    <style name="error_title_text">
+        <item name="android:textSize">24sp</item>
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+    </style>
+
+    <style name="error_content_text">
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+    </style>
+
+    <style name="error_action_text">
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">-0.01</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="stats_kbits_text">
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+
+    <style name="stats_kbits_number">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:background">@drawable/bg_stats_kbits</item>
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingEnd">12dp</item>
+        <item name="android:paddingBottom">8dp</item>
+    </style>
 
 </resources>
