-BottomNAvigationBar style completed -Error trasition added(this requires some testing) -Cleaned up include views

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:itemRippleColor="@color/purplesBottomActiveIconBg"
+            app:itemTextColor="@color/bottom_nav_text_selector"
             app:menu="@menu/bottom_nav_menu" />
 
         <fragment
