--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -90,7 +90,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/progress_slider"
-            tools:visibility="gone" />
+            app:viewModel="@{viewModel}"
+            tools:visibility="visible" />
 
         <include
             android:id="@+id/include_error"
@@ -102,6 +103,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/progress_slider"
+            app:viewModel="@{viewModel}"
             tools:visibility="gone" />
 
         <include
@@ -114,7 +116,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/progress_slider"
-            tools:visibility="visible" />
+            app:viewModel="@{viewModel}"
+            tools:visibility="gone" />
 
 
         <TextView
@@ -133,20 +136,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-
-
-        <!--        <ImageView-->
-        <!--            android:id="@+id/iv_connect_btn_overlay"-->
-        <!--            tools:visibility="gone"-->
-        <!--            android:visibility="gone"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            app:layout_constraintBottom_toBottomOf="@+id/tv_connect_action_btn"-->
-        <!--            app:layout_constraintEnd_toEndOf="@+id/tv_connect_action_btn"-->
-        <!--            app:layout_constraintStart_toStartOf="@+id/tv_connect_action_btn"-->
-        <!--            app:layout_constraintTop_toTopOf="@+id/tv_connect_action_btn"-->
-        <!--            app:srcCompat="@drawable/av_pause_to_stop" />-->
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
