--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,9 @@
     <color name="purpleGradientLight">#BF89F5</color>
     <color name="purpleGradientDark">#A65AF2</color>
     <color name="purplesSwitchTrack">#CCA1F7</color>
+    <color name="purplesBottomNavNotActive">#BEA1F7</color>
+    <color name="purplesBottomNavActive">#FFFFFF</color>
+    <color name="purplesBottomActiveIconBg">#5822C3</color>
 
     <color name="greenNormal">#52E0B6</color>
     <color name="greenDarkText">#0B4131</color>
@@ -52,6 +55,7 @@
     <color name="shadowColor">#33FFFFFF</color>
 
     <color name="textOnPrimary">#FFFFFF</color>
+
 
 
 </resources>
