--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -247,4 +247,12 @@
         <item name="android:paddingBottom">8dp</item>
     </style>
 
+    <!-- styles.xml -->
+    <style name="stats_timer">
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/figtree_regular</item>
+        <item name="android:lineSpacingExtra">8sp</item>
+    </style>
+
 </resources>
