--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,13 @@
             android:layout_marginStart="0dp"
             android:layout_marginEnd="0dp"
             android:background="@color/purpleDarkBottomNav"
+            app:itemRippleColor="@color/purplesBottomActiveIconBg"
+            app:itemTextColor="@color/bottom_nav_text_selector"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:itemRippleColor="@color/purplesBottomActiveIconBg"
-            app:itemTextColor="@color/bottom_nav_text_selector"
             app:menu="@menu/bottom_nav_menu" />
+
 
         <fragment
             android:id="@+id/nav_host_fragment_activity_main"
@@ -30,7 +31,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:defaultNavHost="true"
-            app:layout_constraintBottom_toTopOf="@+id/nav_view"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
