--- a/app/src/main/res/layout/app_routing_table_header.xml
+++ b/app/src/main/res/layout/app_routing_table_header.xml
@@ -1,32 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        >
-        <TextView
-            android:id="@+id/tvTitle"
-            android:paddingHorizontal="@dimen/compact_padding"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/title_in_fragment"
-            android:text="@string/apps" />
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/smProtectAllApps"
+            style="@style/button_text_in_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/common_rounded_square_action"
             android:layout_marginTop="@dimen/default_padding"
             android:layout_marginBottom="15dp"
+            android:background="@drawable/common_rounded_square_action"
             android:padding="@dimen/switch_padding"
             android:text="@string/app_routing_protect_all"
-            style="@style/button_text_in_fragment"
-            app:track="@drawable/toggle_track"
             android:thumb="@drawable/toggle_thumb"
-            />
+            app:track="@drawable/toggle_track" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
