--- a/app/src/main/res/values-sw390dp/dimens.xml
+++ b/app/src/main/res/values-sw390dp/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="connect_state_button_height">183dp</dimen>
     <dimen name="connect_state_button_width">124dp</dimen>
     <dimen name="bottom_nav_height">80dp</dimen>
+    <dimen name="connection_button_bottom_padding">96dp</dimen>
 
 
 
