--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TorWithArti" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TorWithArti" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purpleDark</item>
         <item name="colorPrimaryVariant">@color/purpleNormal</item>
@@ -12,8 +12,17 @@
 
         <!-- Status bar color. -->
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
-        <item name="android:statusBarColor" >@color/purpleDark</item>
+        <item name="android:statusBarColor">@color/purpleDark</item>
 
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.TorWithArti.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.TorWithArti.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.TorWithArti.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
