--- a/app/src/main/res/layout/fragment_logging.xml
+++ b/app/src/main/res/layout/fragment_logging.xml
@@ -18,6 +18,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:navigationIcon="?attr/homeAsUpIndicator"
+            app:menu="@menu/tor_log_menu"
             app:popupTheme="@style/Theme.TorWithArti.PopupOverlay" />
 
 
