--- a/app/src/main/res/drawable/toggle_track.xml
+++ b/app/src/main/res/drawable/toggle_track.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector
     xmlns:android="http://schemas.android.com/apk/res/android">
-  <item android:state_checked="false">
+  <item android:state_checked="false" android:state_enabled="true">
     <shape android:shape="rectangle">
       <corners android:radius="100dp" />
       <solid android:color="#5822C3"/>
@@ -9,11 +9,26 @@
     </shape>
   </item>
 
-  <item android:state_checked="true"
-      >
+  <item android:state_checked="true" android:state_enabled="true">
     <shape android:shape="rectangle">
       <corners android:radius="100dp" />
       <solid android:color="#CCA1F7"/>
+      <stroke android:width="2dp" android:color="#00000000"/>
+    </shape>
+  </item>
+
+  <item android:state_checked="false" android:state_enabled="false">
+    <shape android:shape="rectangle">
+      <corners android:radius="100dp" />
+      <solid android:color="#665822C3"/>
+      <stroke android:width="2dp" android:color="#00000000"/>
+    </shape>
+  </item>
+
+  <item android:state_checked="true" android:state_enabled="false">
+    <shape android:shape="rectangle">
+      <corners android:radius="100dp" />
+      <solid android:color="#66CCA1F7"/>
       <stroke android:width="2dp" android:color="#00000000"/>
     </shape>
   </item>
