wire allAppsProtected settings in connect fragment

--- a/app/src/main/res/layout/include_connection_stats.xml
+++ b/app/src/main/res/layout/include_connection_stats.xml
@@ -145,7 +145,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:checked="true"
+                android:checked="@{viewModel.allAppsProtected}"
+                android:onCheckedChanged="@{viewModel::onProtectAppsChanged}"
                 android:thumb="@drawable/switch_thumb_connected_stats"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_protect_all_apps_label"
                 app:layout_constraintEnd_toEndOf="parent"
