--- a/app/src/main/res/menu/app_routing_menu.xml
+++ b/app/src/main/res/menu/app_routing_menu.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/refresh_circuits"
         android:icon="@drawable/ic_refresh_circuits"
-        android:title="@string/refresh_circuits"
+        android:title="@string/action_refresh_circuits"
         app:showAsAction="always" />
 </menu>
