--- a/app/src/main/res/menu/tor_log_menu.xml
+++ b/app/src/main/res/menu/tor_log_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/copy"
         android:icon="@drawable/ic_content_copy"
-        android:title="@android:string/copy"
+        android:title="@string/action_copy_logs"
         app:showAsAction="always" />
 
 </menu>
