--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/configure_fragment"
         android:name="com.example.torwitharti.ui.configure.ConfigureFragment"
-        android:label="@string/nav_configure"
+        android:label="@string/action_configure"
         tools:layout="@layout/fragment_configure">
         <action
             android:id="@+id/action_configureFragment_to_appRoutingFragment"
@@ -22,7 +22,7 @@
     <fragment
         android:id="@+id/navigation_connect"
         android:name="com.example.torwitharti.ui.home.ConnectFragment"
-        android:label="@string/nav_connect"
+        android:label="@string/action_connect"
         tools:layout="@layout/fragment_connect">
     </fragment>
     <fragment
