--- a/app/src/main/res/layout/include_error_frame.xml
+++ b/app/src/main/res/layout/include_error_frame.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.torwitharti.ui.home.model.ConnectFragmentViewModel" />
+            type="org.torproject.vpn.ui.home.model.ConnectFragmentViewModel" />
 
         <import type="android.view.View" />
 
