--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/configure_fragment"
-        android:name="com.example.torwitharti.ui.configure.ConfigureFragment"
+        android:name="org.torproject.vpn.ui.configure.ConfigureFragment"
         android:label="@string/action_configure"
         tools:layout="@layout/fragment_configure">
         <action
@@ -21,19 +21,19 @@
 
     <fragment
         android:id="@+id/navigation_connect"
-        android:name="com.example.torwitharti.ui.home.ConnectFragment"
+        android:name="org.torproject.vpn.ui.home.ConnectFragment"
         android:label="@string/action_connect"
         tools:layout="@layout/fragment_connect">
     </fragment>
     <fragment
         android:id="@+id/appRoutingFragment"
-        android:name="com.example.torwitharti.ui.approuting.AppRoutingFragment"
+        android:name="org.torproject.vpn.ui.approuting.AppRoutingFragment"
         android:label="AppRoutingFragment"
         tools:layout="@layout/fragment_app_routing" />
 
     <fragment
         android:id="@+id/loggingFragment"
-        android:name="com.example.torwitharti.ui.logging.LoggingFragment"
+        android:name="org.torproject.vpn.ui.logging.LoggingFragment"
         android:label="Logging"
         tools:layout="@layout/fragment_logging" />
 </navigation>
