--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TorWithArti" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.TorVPN" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purpleDark</item>
         <item name="colorPrimaryVariant">@color/purpleNormal</item>
