-Redirect to logs fixed -Added tentative way to detect if other app may be in always-on status.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,6 +24,9 @@
         android:name="org.torproject.vpn.ui.home.ConnectFragment"
         android:label="@string/action_connect"
         tools:layout="@layout/fragment_connect">
+        <action
+            android:id="@+id/action_navigation_connect_to_loggingFragment"
+            app:destination="@id/loggingFragment" />
     </fragment>
     <fragment
         android:id="@+id/appRoutingFragment"
