-Removed the layoutmanager added in xml.

--- a/app/src/main/res/layout/horizontal_recycler_view_item.xml
+++ b/app/src/main/res/layout/horizontal_recycler_view_item.xml
@@ -2,12 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTorApps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:listitem="@layout/app_item_view"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        />
+        tools:listitem="@layout/app_item_view" />
 </layout>
