-Removed the layoutmanager setup from kotlin files, both horizontal and vertical recyclerview LayoutManager is set in respective xml.

--- a/app/src/main/res/layout/horizontal_recycler_view_item.xml
+++ b/app/src/main/res/layout/horizontal_recycler_view_item.xml
@@ -8,5 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        tools:listitem="@layout/app_item_view" />
+        tools:listitem="@layout/app_item_view"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        />
 </layout>
