--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,17 +23,24 @@
         <item name="android:textFontWeight" tools:targetApi="p">550</item>
     </style>
 
-    <style name="subtitle_in_fragment" parent="TextAppearance.MaterialComponents.Subtitle1">
-        <item name="android:textSize">14sp</item>
-        <item name="android:lineSpacingExtra">3sp</item>
-        <item name="android:textColor">@color/textOnPrimary</item>
-    </style>
-
     <style name="button_text_in_fragment" parent="TextAppearance.MaterialComponents.Body1">
         <item name="android:textSize">20sp</item>
         <item name="android:lineSpacingExtra">0sp</item>
         <item name="android:textColor">@color/purpleDarkText</item>
         <item name="android:textFontWeight" tools:targetApi="p">550</item>
+    </style>
+
+    <style name="switch_text_without_background" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingExtra">0sp</item>
+        <item name="android:textColor">@color/textOnPrimary</item>
+        <item name="android:textFontWeight" tools:targetApi="p">400</item>
+    </style>
+
+    <style name="app_circuits_text" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/textOnPrimary</item>
+        <item name="android:textFontWeight" tools:targetApi="p">500</item>
     </style>
 
     <style name="label_text_in_fragment" parent="TextAppearance.MaterialComponents.Body1">
@@ -279,14 +286,13 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:fontFamily">@font/figtree_regular</item>
         <item name="android:lineSpacingExtra">6sp</item>
-        <item name="android:background">@drawable/bg_stats_kbits</item>
+        <item name="android:background">@drawable/bg_rounded</item>
         <item name="android:paddingStart">12dp</item>
         <item name="android:paddingTop">8dp</item>
         <item name="android:paddingEnd">12dp</item>
         <item name="android:paddingBottom">8dp</item>
     </style>
 
-    <!-- styles.xml -->
     <style name="stats_timer">
         <item name="android:textSize">28sp</item>
         <item name="android:textColor">#FFFFFF</item>
@@ -303,6 +309,22 @@
       <!--  <item name="android:windowIsFloating">false</item> -->
       <!--  <item name="android:typeface">monospace</item> -->
         <item name="bottomSheetStyle">@style/rounded_bottom_sheet</item>
+    </style>
+
+    <style name="title_in_stats" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="android:textFontWeight" tools:targetApi="p">600</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:lineSpacingExtra">3sp</item>
+        <item name="android:textColor">@color/indigo10</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="number_in_stats" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="android:textFontWeight" tools:targetApi="p">600</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingExtra">3sp</item>
+        <item name="android:textColor">@color/textOnPrimary</item>
+        <item name="android:capitalize">characters</item>
     </style>
 
 </resources>
